# vectorize-mcp-worker-python

./: .gitignore  AGENTS.md  README.md  pyproject.toml  quickstart.md  schema.sql  wrangler.toml  wrangler.toml.example
.cursor/skills/cloudflare-python-workers/: SKILL.md
.cursor/skills/project-documentation/: SKILL.md
docs/: abstraction_layers.md  component_mapping.md  port_decisions.md  production.md  quickstart.md  reranking.md
docs/todo/: aws-infrastructure-support.md
multimodal-pro-worker/src/: entry.py  logger.py
scripts/: generate_llms_txt.py
src/: auth.py  chunking.py  dashboard.py  entry.py  hybrid_search.py  ingestion.py  keyword_search.py  llms_txt.py  logger.py  mcp.py  models.py  multipart.py  protocols.py
src/bindings/: ai.py  d1.py  ffi_utils.py  multimodal.py  vectorize.py
tests/: conftest.py
tests/e2e/: benchmark_store.py  conftest.py  test_benchmarks.py  test_live_worker.py
tests/integration/: test_endpoint_contract.py  test_llms_txt_contract.py  test_multimodal_contract.py  test_request_schemas.py
tests/stubs/: js.py  workers.py
tests/stubs/pyodide/: __init__.py  ffi.py
tests/unit/: test_auth.py  test_chunking.py  test_hybrid_search.py  test_ingestion.py  test_keyword_scoring.py  test_keyword_search.py  test_logger.py  test_mcp_dispatch.py  test_models.py  test_multimodal_worker.py  test_multipart.py  test_rrf_fusion.py
vectorize-mcp-tool/: README.md  pyproject.toml
vectorize-mcp-tool/src/vectorize_mcp_tool/: __init__.py  cli.py  client.py  metadata.py  server.py
vectorize-mcp-tool/tests/: conftest.py  test_cli.py  test_client.py  test_server.py
