[project]
name = "vectorize-mcp-worker-python"
version = "2.1.0"
description = "Production-Grade Hybrid RAG with Multimodal Support on Cloudflare Edge -- Python Port"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "TCH"]
