[project]
name = "vectorize-mcp-worker-python"
version = "2.1.0"
description = "Production-Grade Hybrid RAG with Multimodal Support on Cloudflare Edge -- Python Port"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "benchmark: E2E benchmark tests (require VECTORIZE_E2E_URL)",
    "e2e: E2E tests against live worker (require VECTORIZE_E2E_URL)",
    "integration: integration/contract tests",
]

[tool.coverage.run]
source = ["src", "multimodal-pro-worker/src"]

[tool.coverage.report]
# Exclude Cloudflare JS FFI bindings and entry routing (tested via integration/E2E)
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "TCH"]
