[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vectorize-mcp-tool"
version = "0.1.0"
description = "CLI and MCP server for the Vectorize knowledge base worker"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["mcp", "vectorize", "rag", "cloudflare", "cli"]
dependencies = [
    "httpx>=0.27",
    "mcp[cli]>=1.0",
    "click>=8.1",
]

[project.scripts]
vectorize-mcp = "vectorize_mcp_tool.cli:main"
vectorize-mcp-server = "vectorize_mcp_tool.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vectorize_mcp_tool"]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "respx>=0.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
